--- a/IndustryEmpire/.classpath
+++ b/IndustryEmpire/.classpath
@@ -2,9 +2,10 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="res/" kind="src" path="graphics"/>
+	<classpathentry excluding="res/|res/" kind="src" path="graphics"/>
 	<classpathentry kind="src" path="CSS"/>
 	<classpathentry kind="src" path="files"/>
+	<classpathentry kind="src" path="graphics/res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ApacheCommon"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
